<resources>
    <string name="app_name">partyq</string>
    <string name="join_party">Join Party</string>
    <string name="start_party">Start Party</string>
    <string name="partyq_logo">Party queue logo</string>
    <string name="about">About</string>
    <string name="legal">Legal</string>
    <string name="leave_party">Leave Party</string>
    <string name="party_code">Party Code</string>
    <string name="support">Support</string>
    <string name="about_title">About partyq</string>
    <string name="about_basic_content">The partyq app lets you and a group of friends use Spotify to listen to and add music from a shared queue that only people in the party have access to. The special thing about partyq is that only one person (the host) needs to have Spotify Premium in order for everyone to be able to use it! partyq is the high-tech equivalent of passing your phone around for people to add songs to your Spotify queue.</string>
    <string name="about_tech_details_title">Technical Details</string>
    <string name="legal_title">Legal Information</string>
    <string name="legal_privacy_policy_title">Privacy Policy</string>
    <string name="legal_privacy_policy_content">The partyq app does not store or share any of your Spotify data, or any other personal data. It is only used within the context of the app to perform the necessary functions and is immediately released when no longer in use.\n\nThe full partyq Privacy Policy can be found at <a href="https://github.com/niehusst/partyq/blob/main/PRIVACY.md">https://github.com/niehusst/partyq/blob/main/PRIVACY.md</a></string>
    <string name="legal_acks_title">Open Source Acknowledgments</string>
    <string name="legal_partyq_lic_title">The partyq License</string>
    <string name="legal_partyq_lic_content">The partyq app is also open source under the Apache-2.0 license. This means that you can see the code, and even contribute to it, via the partyq GitHub page: <a href="https://github.com/niehusst/partyq">https://github.com/niehusst/partyq</a></string>
    <string name="partyq_lic">Copyright 2020 Liam Niehus-Staab\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="spotify_api">&#8226; Spotify Web API</string>
    <string name="spotify_api_lic">https://developer.spotify.com/terms/#iii</string>
    <string name="retrofit">&#8226; Retrofit2</string>
    <string name="retrofit_lic">Copyright 2013 Square, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="spotify_appremote_auth">&#8226; Spotify App Remote\n&#8226; Spotify Authentication Library</string>
    <string name="spotify_appremote_auth_lic">Copyright 2018 Spotify AB.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="gps_nearby">&#8226; Google Play Services Nearby Connections API</string>
    <string name="gps_nearby_lic">Copyright 2020 Google LLC\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="timber">&#8226; Timber</string>
    <string name="timber_lic">Copyright 2013 Jake Wharton\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="glide">&#8226; Glide</string>
    <string name="glide_lic">Copyright 2014 Google, Inc. All rights reserved.\n\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:\n\n1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.\n\n2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.\n\nTHIS SOFTWARE IS PROVIDED BY GOOGLE, INC. ``AS IS`` AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL GOOGLE, INC. OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.\n\nThe views and conclusions contained in the software and documentation are those of the authors and should not be interpreted as representing official policies, either expressed or implied, of Google, Inc.</string>
    <string name="android_material_espresso_samples">&#8226; Android Framework\n&#8226; Material Components for Android\n&#8226; Espresso\n&#8226; Android Architecture Components samples</string>
    <string name="android_material_espresso_samples_lic">Copyright 2018 The Android Open Source Project, Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="gson">&#8226; Gson</string>
    <string name="gson_lic">Copyright 2008 Google Inc.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="jetbrains">&#8226; JetBrains kotlinx-coroutines\n&#8226; JetBrains kotlinx-coroutines-test\n&#8226; JetBrains kotlin-stdlib-jdk8</string>
    <string name="jetbrains_lic">Copyright 2016–2020 JetBrains s.r.o.\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="mockk">&#8226; MockK</string>
    <string name="mockk_lic">Copyright 2017 github.com/mockk\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="support_title">Support</string>
    <string name="support_content">If you\'re having any issues, we\'d love to hear from you! But before that, please check out our FAQs and Common and Known Issues pages to see if you can find an answer or explanation for your problem there (it will likely also be faster, too!).</string>
    <string name="faq_link"><a href="https://github.com/niehusst/partyq/wiki/FAQs">FAQs</a></string>
    <string name="common_issues_link"><a href="https://github.com/niehusst/partyq/wiki/Common-and-Known-Issues">Common and Known Issues</a></string>
    <string name="still_having_trouble">Still having trouble?</string>
    <string name="email_developer">Email a Developer</string>
    <string name="search">Search</string>
    <string name="now_playing">Now Playing</string>
    <string name="queue">Queue</string>
    <string name="join_content">Enter your host\'s 4-digit code to join their party.</string>
    <string name="party_code_hint">e.g. 1234</string>
    <string name="submit">Submit</string>
</resources>