<?xml version="1.0" encoding="utf-8"?>
<!--
    ~   Copyright 2020 Liam Niehus-Staab
    ~
    ~   Licensed under the Apache License, Version 2.0 (the "License");
    ~   you may not use this file except in compliance with the License.
    ~   You may obtain a copy of the License at
    ~
    ~       http://www.apache.org/licenses/LICENSE-2.0
    ~
    ~   Unless required by applicable law or agreed to in writing, software
    ~   distributed under the License is distributed on an "AS IS" BASIS,
    ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    ~   See the License for the specific language governing permissions and
    ~   limitations under the License.
    -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"/>
    <item
        android:id="@+id/now_playing_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_play_arrow_24"
        android:title="@string/now_playing"/>
    <item
        android:id="@+id/queue_nav_graph"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_queue_music_24"
        android:title="@string/queue"/>
</menu>