<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loading"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary200">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginSpace"
            android:layout_marginStart="@dimen/marginSpace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            isGone="@{loading}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/card_title"
                    style="@style/TextAppearance.AppCompat.Display1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/join_party"
                    android:layout_marginTop="@dimen/mediumPadding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/dividerColor"
                    android:layout_marginTop="@dimen/mediumPadding"
                    android:layout_marginStart="@dimen/smallPadding"
                    android:layout_marginEnd="@dimen/smallPadding"
                    app:layout_constraintTop_toBottomOf="@id/card_title"/>

                <TextView
                    android:id="@+id/card_content"
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/smallPadding"
                    android:layout_marginStart="@dimen/largePadding"
                    android:layout_marginEnd="@dimen/largePadding"
                    android:text="@string/join_content"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <EditText
                    android:id="@+id/code_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/largePadding"
                    android:layout_marginStart="@dimen/largePadding"
                    android:layout_marginEnd="@dimen/largePadding"
                    android:background="@color/backgroundColor"
                    android:textColor="@color/onBackgroundColor"
                    android:textSize="@dimen/textMassive"
                    android:textAlignment="center"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textColorHint="@color/onBackgroundColorLight"
                    android:hint="@string/party_code_hint"
                    android:autofillHints="no"
                    android:contentDescription="@string/party_code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_content"
                    app:layout_constraintBottom_toTopOf="@id/submit_button"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_button"
                    style="@style/PartyqButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/largePadding"
                    android:text="@string/submit"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/code_edit_text"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <include
            layout="@layout/loading_spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:progressText="@{@string/searching_for_party}"
            isGone="@{!loading}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>